Test CI changes

--- a/.github/workflows/docker+pypi.yml
+++ b/.github/workflows/docker+pypi.yml
@@ -36,11 +36,12 @@ jobs:
       shell: bash
       run: |
         echo "::set-output name=commit::$(git rev-parse --short HEAD)"
+        echo "::set-output name=commitint::$(git rev-parse HEAD | tr -d -c 0-9)"
 
     - name: Set dummy version number in setup.py for publishing unique version
       shell: bash
       run: |
-        sed -i -E s/'version="(.+)",'/'version="0.0.1-'${{ steps.vars.outputs.commit }}'"',/g setup.py
+        sed -i -E s/'version="(.+)",'/'version="0.0.'${{ steps.vars.outputs.commitint }}'"',/g setup.py
 
     - name: Build a binary wheel and a source tarball
       run: >-
