--- a/.github/workflows/autoblack.yml
+++ b/.github/workflows/autoblack.yml
@@ -17,7 +17,9 @@ jobs:
   build:
     runs-on: [ "self-hosted", "build_host" ]
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
+        with:
+          ref: ${{ github.event.push.head.sha }}
       - name: Set up Python 3.7
         uses: actions/setup-python@v1
         with:
@@ -33,6 +35,6 @@ jobs:
           git config --global user.name 'autoblack'
           git config --global user.email 'cclauss@users.noreply.github.com'
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
-          git checkout $GITHUB_HEAD_REF
+          git checkout
           git commit -am "fixup: Format Python code with Black"
           git push
