--- a/.github/workflows/autoblack.yml
+++ b/.github/workflows/autoblack.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Install Black
         run: pip install black
       - name: Run black --check .
-        run: black --check .
+        run: ~/.local/bin/black --check .
       - name: If needed, commit black changes to the pull request
         if: failure()
         run: |
