--- a/etc/twcmanager/config.json
+++ b/etc/twcmanager/config.json
@@ -20,7 +20,7 @@
         # 100 amp breaker * 0.8 = 80 here.
         # IF YOU'RE NOT SURE WHAT TO PUT HERE, ASK THE ELECTRICIAN WHO INSTALLED YOUR
         # CHARGER.
-        "wiringMaxAmpsAllTWCs": 6,
+        "wiringMaxAmpsAllTWCs": 16,
 
         # If all your chargers share a single circuit breaker, set wiringMaxAmpsPerTWC
         # to the same value as wiringMaxAmpsAllTWCs.
@@ -30,7 +30,7 @@
         # wiringMaxAmpsAllTWCs.
         # For example, if you have two TWCs each with a 50A breaker, set
         # wiringMaxAmpsPerTWC = 50 * 0.8 = 40 and wiringMaxAmpsAllTWCs = 40 + 40 = 80.
-        "wiringMaxAmpsPerTWC": 6,
+        "wiringMaxAmpsPerTWC": 16,
 
         # https://teslamotorsclub.com/tmc/threads/model-s-gen2-charger-efficiency-testing.78740/#post-1844789
         # says you're using 10.85% more power (91.75/82.77=1.1085) charging at 5A vs 40A,
@@ -62,7 +62,7 @@
         # can't reach that rate, so charging as fast as your wiring supports is best
         # from that standpoint.  It's not clear how much damage charging at slower
         # rates really does.
-        "minAmpsPerTWC": 12,
+        "minAmpsPerTWC": 6,
 
         # If the system rapidly changes its mind about whether to start or stop charging,
         # this parameter keeps charging / not charging until the decision remains stable
@@ -85,8 +85,8 @@
         # Newer TWCs can report actual voltages.  For older TWCs, you can specify
         # what voltage should be assumed and whether the power is single (1) or
         # 3-phase.
-        "defaultVoltage": 240,
-        "numberOfPhases": 1,
+        "defaultVoltage": 400,
+        "numberOfPhases": 3,
 
         # As I observed different reactive power changing with the the amps used,
         # I introduce a real power variable for minAmps and maxAmps
@@ -119,7 +119,7 @@
         # If your solar consumption value does include the charger and you don't
         # set this option, you'll see charging consistently stop after a short
         # time interval, due to the available amps being set below minimum charge.
-        "subtractChargerLoad": false,
+        "subtractChargerLoad": true,
 
         # The minChargeLevel parameter determines the minimum acceptable SOC
         # state for any monitored vehicle. If the SOC is below this value,
@@ -217,7 +217,7 @@
         # command line to find your rs485 adapter
         # If you're using a non-USB adapter like an RS485 shield, the value may need to
         # be something like '/dev/serial0'.
-        "port": "/dev/ttyUSB0"
+        "port": "/dev/serial0"
 
         # Note that the RS485 module can also handle simple raw or rfc2217
         # TCP connections. If your requirements are simple, you could use
@@ -468,8 +468,9 @@
 
         },
         "Fronius": {
-            "enabled": false,
-            "serverIP": "192.168.1.2"
+            "enabled": true,
+            "serverIP": "10.0.1.7",
+            "serverIP2": "10.0.1.4"
         },
         # Growatt: Uses a Growatt pypi package to very easily pull the data
         # useBatteyAt describes at whihc SOC the system will add the battery's maxOutput to the pool of available power
